Added the navigation and main header styling

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,24 @@
+  #fun-bus {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    flex-direction: column;
+    border-top: 2px dashed #C0C0C0;
+
+    img {
+      width: 59%;
+    }
+
+    h2 {
+      width: 59%;
+      padding-top: 2%;
+    }
+
+    p {
+      width: 59%;
+    }
+  }//fun bus ends here
+
 .home {
 
   .content-section {
@@ -5,8 +26,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-   
+    border-top: 2px dashed #C0C0C0;
+    padding-top: 2%;
     
     .text-content {
       width: 48%;
