--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation Styles here
+
+.noDecoration(@color){
+    text-decoration: none;
+    color: @color;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    margin-left: 20%;
+    padding: 3% 0;
+
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 50%;
+    }
+
+    nav a {
+        font-size: 20px;
+        .noDecoration(black);
+    }
+}//header closes here
