--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,5 +78,15 @@
       width: 30%;
       margin-bottom: 30px;
     }
+
+    .btn {
+      width: 80%;
+      .btn-style(1px solid @eastern-blue, 10px, @eastern-blue);
+      text-align: center;
+      padding: 4% 6%;
+      font-size: 18px;
+      color: white;
+      
+    }
   }
 }// home
