--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins in here
+
+.btn-style(@border, @border-radius, @bk-color){
+    border: @border;
+    border-radius: @border-radius;
+    background-color: @bk-color;
+}
