added mobile view

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,22 +1,23 @@
   #fun-bus {
     display: flex;
-    width: 100%;
     align-items: center;
     flex-direction: column;
     border-top: 2px dashed #C0C0C0;
 
     img {
-      width: 59%;
+      width: 100%;
     }
 
     h2 {
-      width: 59%;
+      width: 100%;
       padding-top: 2%;
     }
 
     p {
-      width: 59%;
+      width: 100%;
+      padding-bottom: 2%;;
     }
+
   }//fun bus ends here
 
 .home {
@@ -26,7 +27,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    border-top: 2px dashed #C0C0C0;
     padding-top: 2%;
     
     .text-content {
@@ -42,6 +42,21 @@
         border-radius: 10px;
       }
     }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+
+      .text-content {
+        width: 100%;
+      }//text-content closes here
+
+      .img-content{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }//img-content closes here
+    }//media closes here
   }
 
   .inverse-content {
@@ -66,7 +81,11 @@
     img {
       border-radius: 10px;
     }
-  }
+
+    @media @mobile {
+      width: 100%;
+    }//media closes here
+  }//content-destination closes here
 
   .content-pick {
     padding-top: 30px;
@@ -86,7 +105,17 @@
       padding: 4% 6%;
       font-size: 18px;
       color: white;
-      
+      margin-left: 10%;
     }
-  }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: column;
+      margin: 0 10%;
+
+      .destination {
+        width: 100%;
+      }
+    }
+  }//.destination closes here
 }// home
