--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: 1px solid gray;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -171,9 +171,9 @@ img {
 header {
   display: flex;
   justify-content: space-between;
-  width: 60%;
-  margin-left: 20%;
-  padding: 3% 0;
+  width: 100%;
+  margin-left: 0;
+  padding-bottom: 2%;
 }
 header nav {
   display: flex;
@@ -185,6 +185,18 @@ header nav a {
   font-size: 20px;
   text-decoration: none;
   color: black;
+}
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+  header h1 {
+    text-align: center;
+  }
+  header nav {
+    width: 100%;
+  }
 }
 .footer {
   width: 100%;
@@ -199,27 +211,26 @@ header nav a {
 }
 #fun-bus {
   display: flex;
-  width: 100%;
   align-items: center;
   flex-direction: column;
   border-top: 2px dashed #C0C0C0;
 }
 #fun-bus img {
-  width: 59%;
+  width: 100%;
 }
 #fun-bus h2 {
-  width: 59%;
+  width: 100%;
   padding-top: 2%;
 }
 #fun-bus p {
-  width: 59%;
+  width: 100%;
+  padding-bottom: 2%;
 }
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  border-top: 2px dashed #C0C0C0;
   padding-top: 2%;
 }
 .home .content-section .text-content {
@@ -232,6 +243,20 @@ header nav a {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    display: flex;
+    flex-direction: column;
+  }
+  .home .content-section .text-content {
+    width: 100%;
+  }
+  .home .content-section .img-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -252,6 +277,11 @@ header nav a {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
@@ -271,4 +301,15 @@ header nav a {
   padding: 4% 6%;
   font-size: 18px;
   color: white;
+  margin-left: 10%;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10%;
+  }
+  .home .content-pick .destination {
+    width: 100%;
+  }
 }
