--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,9 +8,9 @@
 header {
     display: flex;
     justify-content: space-between;
-    width: 60%;
-    margin-left: 20%;
-    padding: 3% 0;
+    width: 100%;
+    margin-left: 0;
+    padding-bottom: 2%;
 
     nav {
         display: flex;
@@ -22,5 +22,18 @@ header {
     nav a {
         font-size: 20px;
         .noDecoration(black);
+    }
+
+    @media @mobile {
+        display: flex;
+        flex-direction: column;
+
+        h1 {
+            text-align: center;
+        }//h1 closes here
+
+        nav {
+            width: 100%;
+        }
     }
 }//header closes here
