added a grow animation to the buttons

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,3 +5,9 @@
     border-radius: @border-radius;
     background-color: @bk-color;
 }
+
+.grow(@tfOne, @tfTwo, @tfThree) {
+    -webkit-transform: scale(@tfOne);
+        -ms-transform: scale(@tfTwo);
+        transform: scale(@tfThree);
+}
