--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 1px solid gray;
+  border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -214,6 +214,7 @@ header nav a {
   align-items: center;
   flex-direction: column;
   border-top: 2px dashed #C0C0C0;
+  padding-top: 1%;
 }
 #fun-bus img {
   width: 100%;
@@ -293,7 +294,7 @@ header nav a {
   margin-bottom: 30px;
 }
 .home .content-pick .btn {
-  width: 80%;
+  width: 85%;
   border: 1px solid #17A2B8;
   border-radius: 10px;
   background-color: #17A2B8;
@@ -301,7 +302,12 @@ header nav a {
   padding: 4% 6%;
   font-size: 18px;
   color: white;
-  margin-left: 10%;
+  margin-left: 0%;
+}
+.home .content-pick .btn:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 @media (max-width: 500px) {
   .home .content-pick {
@@ -310,6 +316,9 @@ header nav a {
     margin: 0 10%;
   }
   .home .content-pick .destination {
+    width: 100%;
+  }
+  .home .content-pick .btn {
     width: 100%;
   }
 }
