--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
     align-items: center;
     flex-direction: column;
     border-top: 2px dashed #C0C0C0;
+    padding-top: 1%;
 
     img {
       width: 100%;
@@ -99,13 +100,17 @@
     }
 
     .btn {
-      width: 80%;
+      width: 85%;
       .btn-style(1px solid @eastern-blue, 10px, @eastern-blue);
       text-align: center;
       padding: 4% 6%;
       font-size: 18px;
       color: white;
-      margin-left: 10%;
+      margin-left: 0%;
+
+      &:hover {
+        .grow(1.3, 1.3, 1.3);
+      }
     }
 
     @media @mobile {
@@ -115,6 +120,11 @@
 
       .destination {
         width: 100%;
+      }
+
+      .btn {
+        width: 100%;
+        
       }
     }
   }//.destination closes here
